--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongo-java-driver</artifactId>
+        <version>2.13.1</version>
+    </dependency>
   </dependencies>
   
 </project>
